--- a/08_Django/todolist/my_to_do_app/templates/my_to_do_app/index.html
+++ b/08_Django/todolist/my_to_do_app/templates/my_to_do_app/index.html
@@ -41,7 +41,8 @@
         </div>
         <div class="content">
             <div class="messageDiv">
-                <form action="./createTodo/" method="POST">{% csrf_token %}
+                <form action="./createTodo/" method="POST">
+                    {% csrf_token %}
                     <div class="input-group">
                         <input id="todoContent" name="todoContent" type="text" class="form-control" placeholder="메모할 내용을 적어주세요">
                         <span class="input-group-btn">
@@ -53,11 +54,11 @@
 
             <div class="toDoDiv">
                 <ul class="list-group">
-                    {% for todo in todos %}   <!--템플릿 테그 -->
-                    <form action="./doneTodo/" method="GET">
+                    {% for todo in todos %}   <!--템플릿 테그 : 반복문  todos'이터레이블 객체'(쿼리셋)-->
+                    <form action="./deleteTodo/" method="GET">
                         <div class="input-group" name='todo1'>
                             <li class="list-group-item">{{ todo.content }}</li>
-                            <input type="hidden" id="todoNum" name="todoNum" value="{{ todo.id }}"></input>
+                            <input type="hidden" id="todoNum" name="todoNum" value="{{todo.id}}">
                             <span class="input-group-addon">
                                 <button type="submit" class="custom-btn btn btn-danger">완료</button>
                             </span>
