웹 서비스 제작
웹 서비스 제작

--- a/No3_프로젝트/웹/templates/register.html
+++ b/No3_프로젝트/웹/templates/register.html
@@ -1,14 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
 
+
 <div class="box">
-	<h1>Register</h1>
-    <form action="{{ url_for('register') }}" method="post">
-    	<input type="text" name="name" placeholder="Name" required="required" />
-		<input type="email" name="email" placeholder="Email" required="required" />
-        <input type="password" name="password" placeholder="Password" required="required" />
-        <button type="submit" class="btn btn-primary btn-block btn-large">Sign me up.</button>
-    </form>
+        <h1 style="margin-bottom: 50px;">회원가입</h1>
+        <form action="/check2" method="post">
+            <input type="text" name="Email" placeholder="이메일" required="required" style="margin-bottom: 20px;"/>
+            <input type="text" name="name" placeholder="성명" required="required" style="margin-bottom: 20px;"/>
+            <input type="password" name="pw" placeholder="비밀번호" required="required" style="margin-bottom: 20px;"/>
+            <input type="password" name="pw2" placeholder="비밀번호 확인" required="required" style="margin-bottom: 20px;"/>
+            <button type="submit" class="custom-btn btn-11 btn-large" style="float:right">가입완료</button>
+        </form>
 </div>
+
 
 {% endblock %}
