--- a/No3_프로젝트/웹/templates/login.html
+++ b/No3_프로젝트/웹/templates/login.html
@@ -1,13 +1,22 @@
-{% extends "base.html" %}
+{% extends "login_base.html" %}
 {% block content %}
 
 <div class="box">
-    <h1>Login</h1>
-
-    <form action="{{ url_for('login') }}" method="post">
-        <input type="text" name="email" placeholder="Email" required="required"/>
-        <input type="password" name="password" placeholder="Password" required="required"/>
-        <button type="submit" class="btn btn-primary btn-block btn-large">Let me in.</button>
+    <h1>로그인</h1>
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        {% for message in messages %}
+         <p>{{ message }}</p>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
+    <form action="/check" method="post">
+        <input type="text" name="Email" placeholder="이메일" required="required"/>
+        <input type="password" name="pw" placeholder="비밀번호" required="required"/>
+        <div class="pagination">
+          <button type="button" class="custom-btn btn-11 btn-large" onclick="location.href='{{ url_for('check2') }}'">회원가입</button>
+          <button type="submit" class="custom-btn btn-11 btn-large">로그인</button>
+        </div>  
     </form>
 </div>
 
