--- a/No3_프로젝트/웹/templates/secrets.html
+++ b/No3_프로젝트/웹/templates/secrets.html
@@ -2,7 +2,6 @@
 {% block content %}
 
 <div class="container">
-  <h1 class="title">Welcome, Name!</h1>
-  <a href="#">Download Your File</a>
+  <h1 class="title">환영합니다, {{name}}님!</h1>
 </div>
 {% endblock %}
