--- a/No3_프로젝트/웹/static/css/styles.css
+++ b/No3_프로젝트/웹/static/css/styles.css
@@ -132,23 +132,26 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 }
 
 .box_1 { 
-	position: absolute;
-	top: 35%;
-	left: 40%;
-	margin: -150px 0 0 -150px;
-	width:800px;
-	height:800px;
+    position: relative;
+    border: 1px solid white;
+    padding: 10px; 
+	margin: 0 auto;
+	width:100%;
+	height:90%;
+    border-radius: 5px;
+	background: rgb(96,9,240);
+	background: linear-gradient(0deg, rgba(96,9,240,1) 0%, rgba(129,5,240,1) 100%);
 }
 .box_1 h1 { color: #fff; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; text-align:center; }
 
 .box_2 {
     padding: 10px; 
 	position: absolute;
-	top: 40%;
-	left: 15%;
+	top: 30%;
+	left: 10%;
 	margin: -150px 0 0 -150px;
-	width:400px;
-	height:650px;
+	width:25%;
+	height:90%;
     border-radius: 5px;
 }
 .box_2::after{clear:both; content:''; display: block;}
@@ -159,8 +162,8 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
     border: 1px solid white;
     padding: 10px; 
 	margin: 0 auto;
-	width:380px;
-	height:590px;
+	width:80%;
+	height:80%;
     border-radius: 5px;
 	background: rgb(96,9,240);
 	background: linear-gradient(0deg, rgba(96,9,240,1) 0%, rgba(129,5,240,1) 100%);
@@ -180,8 +183,8 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 	top: 20%;
 	left: 50%;
 	margin: -150px 0 0 -150px;
-	width:300px;
-	height:300px;
+	width:20%;
+	height:30%;
 }
 .box_5 h1 { color: #fff; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; text-align:center; }
 
@@ -189,14 +192,26 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 .box_6 {
     padding: 10px; 
 	position: absolute;
-	top: 40%;
-	right: 10%;
+	top: 30%;
+	right: 5%;
 	margin: -150px 0 0 -150px;
-	width:400px;
-	height:650px;
+	width:25%;
+	height:90%;
     border-radius: 5px;
 }
 .box_6::after{clear:both; content:''; display: block;}
+
+
+.box_7 {
+    padding: 10px; 
+	position: absolute;
+	top: 30%;
+	left: 35%;
+	margin: -150px 0 0 -150px;
+	width:40%;
+	height:80%;
+    border-radius: 5px;
+}	
 
 .pagination {
 	justify-content: center;
