--- a/No3_프로젝트/웹/templates/mainpage.html
+++ b/No3_프로젝트/웹/templates/mainpage.html
@@ -6,26 +6,28 @@
 <div class="container">   
 
   <form> 
-    <div class="box_1">
-         <h1> 오늘의 식단은? </h1>
-         <ul class="navbar-nav ml-auto">
-           <li class="nav-item">
-                {% for x in value%}
-                 <p>
-                    <img src="{{ url_for('static', filename = x.image) }}" class="img-thumbnail" alt="Cinque Terre" width="175" height="175">
-                 </p>
-                {% endfor %}
-                <p>
-                  <div class="image-container">
-                    <img style="width: 700px; height:auto;" id="preview-image" src="http://placeimg.com/480/480/nature">
-                    <input style="display: block;" type="file" id="input-image">
-                    <button class="custom-btn btn-9" style="float:right" onclick="location.href='/' " >취소</button>
-                    <button class="custom-btn btn-9" style="float:right" onclick="return confirm('제출 성공! \n업로드한 이미지를 확인합니다.');">제출</button>
-                  </div>
-                </p>
-           </li>
-         </ul>
-    </div>
+    <div class="box_7">   
+      <h1> 오늘의 식단은? </h1>
+        <div class="box_1 box7">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                    {% for x in value%}
+                    <p>
+                        <img src="{{ url_for('static', filename = x.image) }}" class="img-thumbnail" alt="Cinque Terre" width="175" height="175">
+                    </p>
+                    {% endfor %}
+                    <p>
+                      <div class="image-container">
+                        <img style="width: 75%; height:650px;" id="preview-image" src="http://placeimg.com/480/480/nature">
+                        <input style="display: block;" type="file" id="input-image">
+                      </div>
+                    </p>
+              </li>
+            </ul>
+            <button class="custom-btn btn-9" style="float:right" onclick="location.href='/' " >취소</button>
+            <button class="custom-btn btn-9" style="float:right" onclick="return confirm('제출 성공! \n업로드한 이미지를 확인합니다.');">제출</button>
+          </div>
+    </div>     
     <div class="box_2">
         <h1> Graph of the week </h1>
         <div class="box_3 box2">
@@ -35,7 +37,97 @@
     <div class="box_6">
       <h1> Today Calories </h1>
       <div class="box_3 box6">
-      </div>   
+          <style type="text/css">
+            .tg  {border-collapse:collapse;border-color:#aabcfe;border-spacing:0;}
+            .tg td{background-color:#e8edff;border-color:#aabcfe;border-style:solid;border-width:1px;color:#669;
+              font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
+            .tg th{background-color:#b9c9fe;border-color:#aabcfe;border-style:solid;border-width:1px;color:#039;
+              font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+            .tg .tg-ss6j{font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif !important;font-weight:bold;text-align:center;
+              vertical-align:top}
+            </style>
+            <table class="tg" width="100%" height="100%">
+            <thead>
+              <tr>
+                <th class="tg-ss6j">구분</th>
+                <th class="tg-ss6j">기준표</th>
+                <th class="tg-ss6j">오늘 기준</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="tg-ss6j">칼로리</td>
+                <td class="tg-ss6j"></td>
+                <td class="tg-ss6j"></td>
+              </tr>
+              <tr>
+                <td class="tg-ss6j">탄수화물</td>
+                <td class="tg-ss6j"></td>
+                <td class="tg-ss6j"></td>
+              </tr>
+              <tr>
+                <td class="tg-ss6j">당류(g)</td>
+                <td class="tg-ss6j"></td>
+                <td class="tg-ss6j"></td>
+              </tr>
+              <tr>
+                <td class="tg-ss6j">지방(g)</td>
+                <td class="tg-ss6j"></td>
+                <td class="tg-ss6j"></td>
+              </tr>
+              <tr>
+                <td class="tg-ss6j">단백질(g)</td>
+                <td class="tg-ss6j"></td>
+                <td class="tg-ss6j"></td>
+              </tr>
+              <tr>
+                <td class="tg-ss6j">칼슘(mg)</td>
+                <td class="tg-ss6j"></td>
+                <td class="tg-ss6j"></td>
+              </tr>
+              <tr>
+                <td class="tg-ss6j">인(mg)</td>
+                <td class="tg-ss6j"></td>
+                <td class="tg-ss6j"></td>
+              </tr>
+              <tr>
+                <td class="tg-ss6j">나트륨(mg)</td>
+                <td class="tg-ss6j"></td>
+                <td class="tg-ss6j"></td>
+              </tr>
+              <tr>
+                <td class="tg-ss6j">칼륨(mg)</td>
+                <td class="tg-ss6j"></td>
+                <td class="tg-ss6j"></td>
+              </tr>
+              <tr>
+                <td class="tg-ss6j">마그네슘(mg)</td>
+                <td class="tg-ss6j"></td>
+                <td class="tg-ss6j"></td>
+              </tr>
+              <tr>
+                <td class="tg-ss6j">철(mg)</td>
+                <td class="tg-ss6j"></td>
+                <td class="tg-ss6j"></td>
+              </tr>
+              <tr>
+                <td class="tg-ss6j">아연(mg)</td>
+                <td class="tg-ss6j"></td>
+                <td class="tg-ss6j"></td>
+              </tr>
+              <tr>
+                <td class="tg-ss6j">콜레스테롤(g)</td>
+                <td class="tg-ss6j"></td>
+                <td class="tg-ss6j"></td>
+              </tr>
+              <tr>
+                <td class="tg-ss6j">트랜스지방(g)</td>
+                <td class="tg-ss6j"></td>
+                <td class="tg-ss6j"></td>
+              </tr>
+            </tbody>
+            </table>
+        </div>   
       <button class="custom-btn btn-9" onclick="window.location.reload()">업데이트</button>
     </div>  
   </form>
