--- a/No3_프로젝트/웹/static/css/styles.css
+++ b/No3_프로젝트/웹/static/css/styles.css
@@ -44,11 +44,11 @@ a {
 }
 p {
 	font-family: 'Lato', sans-serif;
-	font-weight: 300;
 	text-align: center;
 	font-size: 18px;
-	color: rgb(194, 230, 255);;
+	color: rgb(117, 149, 175);;
 }
+
 
 .box { 
 	position: absolute;
@@ -137,7 +137,7 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
     padding: 10px; 
 	margin: 0 auto;
 	width:100%;
-	height:90%;
+	height:100%;
     border-radius: 5px;
 	background: rgb(96,9,240);
 	background: linear-gradient(0deg, rgba(96,9,240,1) 0%, rgba(129,5,240,1) 100%);
@@ -147,7 +147,7 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 .box_2 {
     padding: 10px; 
 	position: absolute;
-	top: 30%;
+	top: 20%;
 	left: 10%;
 	margin: -150px 0 0 -150px;
 	width:25%;
@@ -164,6 +164,7 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 	margin: 0 auto;
 	width:80%;
 	height:80%;
+	overflow: scroll;
     border-radius: 5px;
 	background: rgb(96,9,240);
 	background: linear-gradient(0deg, rgba(96,9,240,1) 0%, rgba(129,5,240,1) 100%);
@@ -184,7 +185,7 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 	left: 50%;
 	margin: -150px 0 0 -150px;
 	width:20%;
-	height:30%;
+	height:20%;
 }
 .box_5 h1 { color: #fff; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; text-align:center; }
 
@@ -192,7 +193,7 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 .box_6 {
     padding: 10px; 
 	position: absolute;
-	top: 30%;
+	top: 20%;
 	right: 5%;
 	margin: -150px 0 0 -150px;
 	width:25%;
@@ -205,13 +206,97 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 .box_7 {
     padding: 10px; 
 	position: absolute;
-	top: 30%;
+	top: 20%;
 	left: 35%;
 	margin: -150px 0 0 -150px;
 	width:40%;
-	height:80%;
+	height:800px;
     border-radius: 5px;
 }	
+
+
+.box_8 {
+	position: absolute;
+	border: 1px solid white;
+    padding: 10px; 
+	margin: -150px 0 0 -150px;
+	left:30%;
+	bottom: -50px;
+	width:100%;
+	height:30%;
+    border-radius: 5px;
+}
+
+.box_9 {
+    position: absolute;
+    border: 1px solid white;
+    padding: 10px; 
+	margin: 0 auto;
+	bottom:5%;
+	width:97%;
+	height:180px;
+    border-radius: 5px;
+	background: rgb(96,9,240);
+	background: linear-gradient(0deg, rgba(96,9,240,1) 0%, rgba(129,5,240,1) 100%);
+} 
+
+.box_10 {
+    position: absolute;
+    border: 1px solid white;
+    padding: 10px; 
+	bottom: 10%;
+	left: 2%;
+	margin: 0 auto;
+	width:20%;
+	height:80%;
+    border-radius: 5px;
+} 
+
+.box_11 {
+	position: absolute;
+    float : middle;
+    border: 1px solid white;
+    padding: 5px; 
+	bottom: 10%;
+	left: 25%;
+	margin: 0 auto;
+	width:30%;
+	height:80%;
+    border-radius: 5px;
+} 
+
+.box_12 {
+	position: absolute;
+    float : right;
+    border: 1px solid white;
+    padding: 5px; 
+	bottom: 10%;
+	left: 57%;
+	margin: 0 auto;
+	width:40%;
+	height:80%;
+    border-radius: 5px;
+} 
+
+.box_13 {
+    padding: 10px; 
+	position: absolute;
+	top: 20%;
+	left: 40%;
+	margin: -150px 0 0 -150px;
+	width:40%;
+	height:600px;
+    border-radius: 5px;
+}
+.box_14 { 
+	position: absolute;
+	top: 80%;
+	left: 40%;
+	margin: -150px 0 0 -150px;
+	width:40%;
+	height:20%;
+}
+
 
 .pagination {
 	justify-content: center;
@@ -436,8 +521,8 @@ button {
 	border: none;
 	transition: all 0.3s ease;
 	overflow: hidden;
-  }
-  .btn-10:after {
+}
+.btn-10:after {
 	position: absolute;
 	content: " ";
 	top: 0;
@@ -448,31 +533,31 @@ button {
 	transition: all 0.3s ease;
 	-webkit-transform: scale(.1);
 	transform: scale(.1);
-  }
-  .btn-10:hover {
+}
+.btn-10:hover {
 	color: #fff;
 	border: none;
 	background: transparent;
-  }
-  .btn-10:hover:after {
+}
+.btn-10:hover:after {
 	background: rgb(0,3,255);
-    background: linear-gradient(0deg, rgba(2,126,251,1) 0%,  rgba(0,3,255,1)100%);
+    background: linear-gradient(0deg, rgba(2,126,251,1) 0%,  rgba(0,3,255,1) 100%);
 	-webkit-transform: scale(1);
 	transform: scale(1);
-  }
+}
 
-  .btn-11 {
+.btn-11 {
 	  border: none;
 	  background: rgb(251,33,117);
 	  background: linear-gradient(0deg, rgba(251,33,117,1) 0%, rgba(234,76,137,1) 100%);
 	  color: #fff;
 	  overflow: hidden;
-  }
-  .btn-11:hover {
+}
+.btn-11:hover {
 	  text-decoration: none;
 	  color: #fff;
-  }
-  .btn-11:before {
+}
+.btn-11:before {
 	  position: absolute;
 	  content: '';
 	  display: inline-block;
@@ -482,15 +567,45 @@ button {
 	  height: 100%;
 	  background-color: #fff;
 	  animation: shiny-btn1 3s ease-in-out infinite;
-  }
-  .btn-11:hover{
+}
+.btn-11:hover{
 	opacity: .7;
-  }
-  .btn-11:active{
+}
+.btn-11:active{
 	box-shadow:  4px 4px 6px 0 rgba(255,255,255,.3),
 				-4px -4px 6px 0 rgba(116, 125, 136, .2), 
 	  inset -4px -4px 6px 0 rgba(255,255,255,.2),
 	  inset 4px 4px 6px 0 rgba(0, 0, 0, .2);
-  }  
+}  
 
-
+.btn-12 {
+	border: none;
+	background: rgb(251,33,117);
+	background: linear-gradient(0deg, rgba(251,33,117,1) 0%, rgba(234,76,137,1) 100%);
+	color: #fff;
+	overflow: hidden;
+}
+.btn-12:hover {
+	text-decoration: none;
+	color: #fff;
+}
+.btn-12:before {
+	position: absolute;
+	content: '';
+	display: inline-block;
+	top: 500px;
+	left: 0;
+	width: 30px;
+	height: 100%;
+	background-color: #fff;
+	animation: shiny-btn1 3s ease-in-out infinite;
+}
+.btn-12:hover{
+  opacity: .7;
+}
+.btn-12:active{
+  box-shadow:  4px 4px 6px 0 rgba(255,255,255,.3),
+			  -4px -4px 6px 0 rgba(116, 125, 136, .2), 
+	inset -4px -4px 6px 0 rgba(255,255,255,.2),
+	inset 4px 4px 6px 0 rgba(0, 0, 0, .2);
+} 
