--- a/No3_프로젝트/웹/templates/login_base.html
+++ b/No3_프로젝트/웹/templates/login_base.html
@@ -21,8 +21,9 @@
     <a class="navbar_1-brand" onclick="location.href='/mainpage/login'">BAPPU</a>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item" >
-          <a class="nav-item" style="justify-content-end; margin-right: 2px;" onclick="location.href='/mainpage/secret'">개인정보보호법</a>
+        <li class="nav-item">
+          <a class="nav-item" style="justify-content-end; margin-right: 2px;"
+            onclick="location.href='/mainpage/secret'">개인정보보호법</a>
         </li>
       </ul>
 
